# rootloader

./: README.md  gen_documentation.bash  pyproject.toml
docs/: README.md
docs/rootloader/: attrdict.md  index.md  tdirectory.md  tfile.md  th1.md  th2.md  tleaf.md  ttree.md  version.md
rootloader/: __init__.py  attrdict.py  tdirectory.py  tfile.py  th1.py  th2.py  tleaf.py  ttree.py  version.py
tests/: README.md  conftest.py  test_attrdict.py  test_package.py  test_tdirectory.py  test_tfile.py  test_th1.py  test_th2.py  test_tleaf.py  test_ttree.py
